--- a/life_expectancy/notebooks/notebook_to_test_things.ipynb
+++ b/life_expectancy/notebooks/notebook_to_test_things.ipynb
@@ -2,6 +2,256 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _split_column(df_: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"splits a column into several, based on a comma separating diff values\"\"\"\n",
+    "    df = df_.copy()\n",
+    "    new_cols = df['unit,sex,age,geo\\\\time'].str.split(',', expand=True)\n",
+    "    new_cols.columns = ['unit', 'sex', 'age', 'region']\n",
+    "    df = pd.concat([df, new_cols], axis=1)\n",
+    "    df = df.drop(['unit,sex,age,geo\\\\time'], axis=1)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_data(df_: pd.DataFrame, region: str = \"PT\") -> None:\n",
+    "    \"\"\" receives a dataframe and do some cleaning\"\"\"\n",
+    "\n",
+    "    df = df_.copy()\n",
+    "    df = _split_column(df)\n",
+    "    df = df.melt(id_vars=[\"unit\", \"sex\", \"age\", \"region\"], var_name=\"year\", value_name=\"value\")\n",
+    "    df = extract_numeric_values_from_column(df, \"value\")\n",
+    "    df = df.dropna(subset=[\"value\"])\n",
+    "    df[\"year\"] = df[\"year\"].astype(int)\n",
+    "    df[\"value\"] = df[\"value\"].astype(float)\n",
+    "    df = df[df.region == region]\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_numeric_values_from_column(df_: pd.DataFrame, column: str) -> pd.DataFrame:\n",
+    "    \"\"\"extracts numerical values from a string including several strange characteres\"\"\"\n",
+    "    df = df_.copy()\n",
+    "    df[column]= df[column].replace(to_replace=r'[^\\d\\.]+', value='', regex=True)\n",
+    "    df[column] = df[column].replace(to_replace='', value=np.nan)\n",
+    "    df[column] = pd.to_numeric(df[column], errors='coerce')\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FILE_DIR = \"/Users/danielneves/00_DareData/090_pod_5/assignments/life_expectancy/data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import pandas as pd\n",
+    "\n",
+    "FILE_DIR = Path(\"/Users/danielneves/00_DareData/090_pod_5/assignments/life_expectancy/data\")\n",
+    "df = pd.read_csv(FILE_DIR.joinpath(\"eu_life_expectancy_raw.tsv\"), sep='\\t')\n",
+    "df_cleaned = clean_data(df, region=\"PT\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unit</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>region</th>\n",
+       "      <th>year</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3460</th>\n",
+       "      <td>YR</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Y65</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>21.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4804</th>\n",
+       "      <td>YR</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Y_LT1</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>84.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8276</th>\n",
+       "      <td>YR</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Y65</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>17.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9620</th>\n",
+       "      <td>YR</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Y_LT1</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>78.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13092</th>\n",
+       "      <td>YR</td>\n",
+       "      <td>T</td>\n",
+       "      <td>Y65</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>895540</th>\n",
+       "      <td>YR</td>\n",
+       "      <td>T</td>\n",
+       "      <td>Y83</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>4.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>895596</th>\n",
+       "      <td>YR</td>\n",
+       "      <td>T</td>\n",
+       "      <td>Y84</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>895652</th>\n",
+       "      <td>YR</td>\n",
+       "      <td>T</td>\n",
+       "      <td>Y9</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>62.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>895708</th>\n",
+       "      <td>YR</td>\n",
+       "      <td>T</td>\n",
+       "      <td>Y_GE85</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>4.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>895764</th>\n",
+       "      <td>YR</td>\n",
+       "      <td>T</td>\n",
+       "      <td>Y_LT1</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15744 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       unit sex     age region  year  value\n",
+       "3460     YR   F     Y65     PT  2021   21.7\n",
+       "4804     YR   F   Y_LT1     PT  2021   84.3\n",
+       "8276     YR   M     Y65     PT  2021   17.8\n",
+       "9620     YR   M   Y_LT1     PT  2021   78.0\n",
+       "13092    YR   T     Y65     PT  2021   19.9\n",
+       "...     ...  ..     ...    ...   ...    ...\n",
+       "895540   YR   T     Y83     PT  1960    4.7\n",
+       "895596   YR   T     Y84     PT  1960    4.5\n",
+       "895652   YR   T      Y9     PT  1960   62.9\n",
+       "895708   YR   T  Y_GE85     PT  1960    4.2\n",
+       "895764   YR   T   Y_LT1     PT  1960   64.0\n",
+       "\n",
+       "[15744 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cleaned"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -9,8 +259,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "pod5",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.10"
   },
   "orig_nbformat": 4
  },
